// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/training/question when invalid state should render component 1`] = `
Array [
  <header
    className="sc-csuQGl dCstgC"
  >
    <div
      className="sc-htoDjs kcwXek"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <i
        className="material-icons sc-bRBYWo gfzViQ"
        color="#fff"
        data-test="back"
        onClick={[Function]}
      >
        arrow_back
      </i>
    </div>
    <h1
      className="sc-Rmtcm hvwJrv"
    >
      百人一首 - 練習 -
    </h1>
  </header>,
  <div
    className="sc-dVhcbM hXVtek"
  >
    <div
      className="sc-jlyJG dDBvSE"
    >
      <p
        className="sc-gipzik ewCfZa"
      >
        不正な遷移を行いました。前の画面からやり直してください。
      </p>
    </div>
  </div>,
]
`;

exports[`/training/question when valid state should render component 1`] = `
Array [
  <header
    className="sc-csuQGl dCstgC"
  >
    <div
      className="sc-htoDjs kcwXek"
      onMouseDown={[Function]}
      onMouseUp={[Function]}
    >
      <i
        className="material-icons sc-bRBYWo gfzViQ"
        color="#fff"
        data-test="back"
        onClick={[Function]}
      >
        arrow_back
      </i>
    </div>
    <h1
      className="sc-Rmtcm hvwJrv"
    >
      百人一首 - 練習 -
    </h1>
  </header>,
  <div
    className="sc-dVhcbM hXVtek"
  >
    <div
      className="sc-jlyJG dDBvSE"
    >
      <p
        className="sc-gipzik ewCfZa"
      >
        指定した条件の歌はありませんでした
      </p>
    </div>
  </div>,
]
`;
